expected/main/gens/polymorphic-external-scope-err.err
ERROR: "actual/main/gens/polymorphic-external-scope-err.lc", line 1
external initStored {primInitStored n a}    :: t -> Init (Stored t)
                                    ^
The type variable "n" is not in scope

ERROR: Aborting after previously reported error

